testsuite/tests/interpreter_errors/call_property_wrong_arity/test.out
main.adb
script:2:32: error: Expected 1 arguments but got 2
2 | print(names[1].referenced_decl(true, 1))
  |                                ^^^^^^^ 

